--- a/CSharpish String Format/HexSFI.cls
+++ b/CSharpish String Format/HexSFI.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "PercentSFI"
+Attribute VB_Name = "HexSFI"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
@@ -14,13 +14,18 @@ Option Explicit
 Implements IStringFormatIdentifier
 
 Private Function IStringFormatIdentifier_GetFormattedValue(ByVal value As Variant, ByVal specifier As StringFormatSpecifier) As String
-    If precisionSpecifier > 0 Then
-        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0." & String$(precisionSpecifier, Chr$(48)) & "%")
-    Else
-        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0%")
+    Dim hexValue As String
+    hexValue = Hex$(value)
+    
+    'add left padding and trim to size
+    If specifier.Precision > 0 Then
+        hexValue = Right$(String$(specifier.Precision, "0") & hexValue, specifier.Precision)
     End If
+
+    IStringFormatIdentifier_GetFormattedValue = "0x" & CopyCapitalisation(specifier.identifier, hexValue)
+    
 End Function
 
 Private Function IStringFormatIdentifier_IsIdentifierMatch(ByVal specifier As StringFormatSpecifier) As Boolean
-    IStringFormatIdentifier_IsIdentifierMatch = UCase(specifier.identifier) = "P"
+    IStringFormatIdentifier_IsIdentifierMatch = UCase(specifier.identifier) = "X"
 End Function
