--- a/CSharpish String Format/NumericPaddingSFI.cls
+++ b/CSharpish String Format/NumericPaddingSFI.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "PercentSFI"
+Attribute VB_Name = "NumericPaddingSFI"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
@@ -14,13 +14,9 @@ Option Explicit
 Implements IStringFormatIdentifier
 
 Private Function IStringFormatIdentifier_GetFormattedValue(ByVal value As Variant, ByVal specifier As StringFormatSpecifier) As String
-    If precisionSpecifier > 0 Then
-        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0." & String$(precisionSpecifier, Chr$(48)) & "%")
-    Else
-        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0%")
-    End If
+    Err.Raise 5 'TODO what is this?
 End Function
 
 Private Function IStringFormatIdentifier_IsIdentifierMatch(ByVal specifier As StringFormatSpecifier) As Boolean
-    IStringFormatIdentifier_IsIdentifierMatch = UCase(specifier.identifier) = "P"
+    IStringFormatIdentifier_IsIdentifierMatch = False
 End Function
