Add generic datetime formatter
since all the datetimes are very similar, this is easier than many classes

--- a/CSharpish String Format/StringHelper.cls
+++ b/CSharpish String Format/StringHelper.cls
@@ -71,6 +71,7 @@ End Sub
 Private Sub InitDateTimeSpecifiers()
 
     Set this.DateTimeSpecifiers = New Collection
+    this.DateTimeSpecifiers.Add GenericDateTimeSFI
     '    this.DateTimeSpecifiers.Add New CustomDFI
     '    this.DateTimeSpecifiers.Add New FullDateLongStringFormatSpecifier
     '    this.DateTimeSpecifiers.Add New FullDateShortSFI
