--- a/CSharpish String Format/PercentSFI.cls
+++ b/CSharpish String Format/PercentSFI.cls
@@ -14,8 +14,8 @@ Option Explicit
 Implements IStringFormatIdentifier
 
 Private Function IStringFormatIdentifier_GetFormattedValue(ByVal value As Variant, ByVal specifier As StringFormatSpecifier) As String
-    If precisionSpecifier > 0 Then
-        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0." & String$(precisionSpecifier, Chr$(48)) & "%")
+    If specifier.Precision > 0 Then
+        IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0." & String$(specifier.Precision, Chr$(48)) & "%")
     Else
         IStringFormatIdentifier_GetFormattedValue = Format(value, "#,##0%")
     End If
